data/derived/comb/progs/unify/prog6234.ml.out
Characters 478-479:
  | Golden e'              -> cos(eval (e',x,y)**2 -. eval (e',x,y) -. 1)
                                                 ^
Error: This expression has type int but an expression was expected of type
         float
